Bug 15366 - wbinfo -u fails on ad dc with >1000 users
Summary: wbinfo -u fails on ad dc with >1000 users
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-27 12:07 UTC by Volker Lendecke
Modified: 2023-05-31 16:11 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.17 and 4.18 (7.55 KB, patch)
2023-05-09 06:18 UTC, Volker Lendecke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-04-27 12:07:02 UTC
Have patch, need bugnumber
Comment 1 Samba QA Contact 2023-05-09 02:59:05 UTC
This bug was referenced in samba master:

f633389f36e79d3e772777ad7ca13012e3616273
6206e15b4de0ba67d713124c2be353dabf3878c8
Comment 2 Volker Lendecke 2023-05-09 06:18:36 UTC
Created attachment 17880 [details]
Patch for 4.17 and 4.18
Comment 3 Jule Anger 2023-05-09 14:35:48 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 4 Samba QA Contact 2023-05-09 15:39:03 UTC
This bug was referenced in samba v4-17-test:

8cf0241459f2f5dbd28833fb32768492c500c38d
05f30cea353238702b999c023f3d109c51e201ed
Comment 5 Samba QA Contact 2023-05-11 07:12:08 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

8cf0241459f2f5dbd28833fb32768492c500c38d
05f30cea353238702b999c023f3d109c51e201ed
Comment 6 Samba QA Contact 2023-05-12 15:59:04 UTC
This bug was referenced in samba v4-18-test:

97c9f812fa9f246fbedebcb28fcf875ec6679709
0f1dbe552dc061e1863222b6b9471c1c7a412a83
Comment 7 Jule Anger 2023-05-15 07:39:40 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-05-31 16:11:41 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.3):

97c9f812fa9f246fbedebcb28fcf875ec6679709
0f1dbe552dc061e1863222b6b9471c1c7a412a83